; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_name.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_load_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"load name %s\0A\00", align 1
@MP_MAP_LOOKUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_load_name(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @qstr_str(i32 %5)
  %7 = call i32 @DEBUG_OP_printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = call %struct.TYPE_6__* (...) @mp_locals_get()
  %9 = call %struct.TYPE_6__* (...) @mp_globals_get()
  %10 = icmp ne %struct.TYPE_6__* %8, %9
  br i1 %10, label %11, label %25

11:                                               ; preds = %1
  %12 = call %struct.TYPE_6__* (...) @mp_locals_get()
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @MP_OBJ_NEW_QSTR(i32 %14)
  %16 = load i32, i32* @MP_MAP_LOOKUP, align 4
  %17 = call %struct.TYPE_5__* @mp_map_lookup(i32* %13, i32 %15, i32 %16)
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** %4, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = icmp ne %struct.TYPE_5__* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %11
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %2, align 4
  br label %28

24:                                               ; preds = %11
  br label %25

25:                                               ; preds = %24, %1
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @mp_load_global(i32 %26)
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %20
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @DEBUG_OP_printf(i8*, i32) #1

declare dso_local i32 @qstr_str(i32) #1

declare dso_local %struct.TYPE_6__* @mp_locals_get(...) #1

declare dso_local %struct.TYPE_6__* @mp_globals_get(...) #1

declare dso_local %struct.TYPE_5__* @mp_map_lookup(i32*, i32, i32) #1

declare dso_local i32 @MP_OBJ_NEW_QSTR(i32) #1

declare dso_local i32 @mp_load_global(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
